exports[`sendRequest should return immutable response 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://api.io/users",
      Object {
        "body": undefined,
        "headers": Object {},
        "method": "GET",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`sendRequest should return normalize response if schema is specified 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://api.io/users/1",
      Object {
        "body": undefined,
        "headers": Object {},
        "method": "GET",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
